# PasswordManagerBE

./: .env.example  Dockerfile  README.md  access_token.py  database.py  docker-compose.yml  main.py  models.py  password.py  pyproject.toml  test_db.py  user.py
app/: access_token.py  database.py  database_functions.py  dependencies.py  encryption.py  group.py  main.py  password.py  record.py  security.py  user.py  validate.py
app/database/: connection.py
db/migrations/: 20240706154627_user.down.sql  20240706154627_user.up.sql  20240711122625_Folder.down.sql  20240711122625_Folder.up.sql  20240711122625_Group.down.sql  20240711122625_Group.up.sql  20240711122633_Password.down.sql  20240711122633_Password.up.sql  20240711122633_Record.down.sql  20240711122633_Record.up.sql
models/: group.py  records.py
models/user/: models.py
